# flatty

./: requirements.txt  setup.cfg
.github/workflows/: build.yml
flatty/: .env.dist  __init__.py  __main__.py  flatty.py
flatty/database/: __init__.py  mongodb_manager.py  offer_actualizer.py
flatty/models/: __init__.py  appartment_offer.py  price.py
flatty/schemas/: __init__.py  appartment_offer.py  custom_fields.py  price.py
flatty/scrapers/: __init__.py  base_offer_scraper.py  nieruchomosci_online_scraper.py
flatty/serializers/: __init__.py  appartment_offer_serializer.py  base_serializer.py
flatty/utils/: __init__.py  user_agents.py
