[metadata]
name = flatty
version = 0.0.1
author = Edwin Żurawik
author_email = edwin.zurawik@sts.pl
description = utility for scraping appartment offers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    beautifulsoup4==4.11.1
    marshmallow==3.15.0
    pymongo==4.1.1
    python-dotenv==0.20.0
    requests==2.27.1
[flake8]
max-line-length = 88
exclude = venv

[isort]
profile = black
multi_line_output = 3
force_grid_wrap = 3
